project/logs/20250626_162616.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Qembed_debug:4:1: error: unknown type name 'SampleState'; did you mean 'SamplerState'?
SampleState gSample : register(s0);
^~~~~~~~~~~
SamplerState
note: 'SamplerState' declared here

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Application terminating.
WSTRINGHello, DirectX!

